Покрыть InMemoryTaskManager тестами