@@ -11,7 +11,7 @@ public class InMemoryHistoryManager implements HistoryManager {
     @Override
     public void add(Task task) {
         if (history.size() >= 10) {
-            history.removeFirst();
+            history.remove(0);
         }
         history.add(task);
     }
