@@ -31,15 +31,15 @@ class InMemoryTaskManagerTest {
         final List<Task> tasks = taskManager.getAllTasks();
         assertNotNull(tasks, "Задачи не возвращаются.");
         assertEquals(1, tasks.size(), "Неверное количество задач.");
-        assertEquals(task, tasks.getFirst(), "Задачи не совпадают.");
+        assertEquals(task, tasks.get(0), "Задачи не совпадают.");
     }
 
     @Test
     public void addNewEpicWithSubtask() {
-        Epic epic = new Epic(null, "Test addNewEpicWithSubtask epic",
+        final Epic epic = new Epic(null, "Test addNewEpicWithSubtask epic",
                 "Test addNewEpicSubtask epic description");
         final int epicId = taskManager.addNewEpic(epic);
-        Subtask subtask = new Subtask(null, "Test addNewSubtask", "Test addNewSubtask description",
+        final Subtask subtask = new Subtask(null, "Test addNewSubtask", "Test addNewSubtask description",
                 Status.DONE, epicId);
         final int subtaskId = taskManager.addNewSubtask(subtask);
 
@@ -55,20 +55,20 @@ class InMemoryTaskManagerTest {
         final List<Epic> epics = taskManager.getAllEpics();
         assertNotNull(epics, "Эпики не возвращаются.");
         assertEquals(1, epics.size(), "Неверное количество эпиков.");
-        assertEquals(epic, epics.getFirst(), "Эпики не совпадают.");
+        assertEquals(epic, epics.get(0), "Эпики не совпадают.");
 
         final List<Subtask> subtasks = taskManager.getAllSubtasks();
         assertNotNull(subtasks, "Подзадачи не возвращаются.");
         assertEquals(1, subtasks.size(), "Неверное количество подзадач.");
-        assertEquals(subtask, subtasks.getFirst(), "Подзадачи не совпадают.");
+        assertEquals(subtask, subtasks.get(0), "Подзадачи не совпадают.");
     }
 
     @Test
     public void updateTask() {
-        Task old = new Task(null, "Старая задача из теста updateTask", "Описание старой задачи",
+        final Task old = new Task(null, "Старая задача из теста updateTask", "Описание старой задачи",
                 Status.NEW);
         final int id = taskManager.addNewTask(old);
-        Task updated = new Task(id, "Новая задача из теста updateTask", "Описание новой задачи",
+        final Task updated = new Task(id, "Новая задача из теста updateTask", "Описание новой задачи",
                 Status.IN_PROGRESS);
         taskManager.updateTask(updated);
         assertEquals(updated, taskManager.getTaskById(id), "Задача не обновляется.");
@@ -76,10 +76,124 @@ class InMemoryTaskManagerTest {
 
     @Test
     public void updateEpic() {
-        Epic old = new Epic(null, "Старый эпик из теста updateEpic", "Описание старого эпика");
+        final Epic old = new Epic(null, "Старый эпик из теста updateEpic", "Описание старого эпика");
         final int id = taskManager.addNewEpic(old);
         Epic updated = new Epic(id, "Новый эпик из теста updateEpic", "Описание нового эпика");
         taskManager.updateEpic(updated);
         assertEquals(updated, taskManager.getEpicById(id), "Эпик не обновляется.");
+    }
+
+    @Test
+    public void updateSubtask() {
+        final Epic epic = new Epic(null, "Новый эпик из теста updateSubtask", "Описание нового эпика");
+        final int epicId = taskManager.addNewEpic(epic);
+        final Subtask old = new Subtask(null, "Старая подзадача из теста updateSubtask",
+                "Описание старой подзадачи", Status.NEW, epicId);
+        final int subtaskId = taskManager.addNewSubtask(old);
+        final Subtask updated = new Subtask(subtaskId, "Обновленная подзадача из теста updateSubtask",
+                "Описание обновленной подзадачи", Status.IN_PROGRESS, epicId);
+        taskManager.updateSubtask(updated);
+
+        assertEquals(updated, taskManager.getSubtaskById(subtaskId), "Подзадача не обновляется.");
+        assertEquals(Status.IN_PROGRESS, epic.getStatus(), "Статус эпика не обновился вместе с подзадачей.");
+    }
+
+    @Test
+    public void deleteTask() {
+        final Task task = new Task(null, "Задача из теста deleteTask", "Описание задчи", Status.NEW);
+        final int id = taskManager.addNewTask(task);
+        taskManager.deleteTask(id);
+        assertNull(taskManager.getTaskById(id), "Задача не удаляется.");
+        assertEquals(0, taskManager.getAllTasks().size(), "Список задач не пустой.");
+    }
+
+    @Test
+    public void deleteEpic() {
+        final Epic epic = new Epic(null, "Новый эпик из теста deleteEpic", "Описание эпика");
+        final int epicId = taskManager.addNewEpic(epic);
+        final Subtask subtask = new Subtask(null, "Подзадача из теста deleteEpic",
+                "Описание подзадачи", Status.NEW, epicId);
+        final int subtaskId = taskManager.addNewSubtask(subtask);
+        taskManager.deleteEpic(epicId);
+
+        assertNull(taskManager.getEpicById(epicId), "Эпик не удаляется.");
+        assertNull(taskManager.getSubtaskById(subtaskId), "Подзадача не удаляется вместе с эпиком.");
+        assertEquals(0, taskManager.getAllEpics().size(), "Список эпиков не пустой.");
+        assertEquals(0, taskManager.getAllSubtasks().size(), "Список подзадач не пустой.");
+    }
+
+    @Test
+    public void deleteSubtask() {
+        final Epic epic = new Epic(null, "Новый эпик из теста deleteSubtask", "Описание эпика");
+        final int epicId = taskManager.addNewEpic(epic);
+        final Subtask subtask = new Subtask(null, "Подзадача из теста deleteSubtask",
+                "Описание подзадачи", Status.DONE, epicId);
+        final int subtaskId = taskManager.addNewSubtask(subtask);
+        taskManager.deleteSubtask(subtaskId);
+
+        assertNull(taskManager.getSubtaskById(subtaskId), "Подзадача не удаляется.");
+        assertEquals(0, taskManager.getAllSubtasks().size(), "Список подзадач не пустой.");
+        assertEquals(0, epic.getSubtaskIds().size(), "Не удалился id подзадачи у эпика.");
+        assertEquals(Status.NEW, epic.getStatus(), "Статус эпика не стал NEW после удаления подзадачи.");
+    }
+
+    @Test
+    public void deleteAllTasks() {
+        final Task task1 = new Task(null, "Задача 1 из теста deleteTask", "Описание задчи 1", Status.NEW);
+        final Task task2 = new Task(null, "Задача 2 из теста deleteTask", "Описание задчи 2", Status.IN_PROGRESS);
+        final int task1Id = taskManager.addNewTask(task1);
+        final int task2Id = taskManager.addNewTask(task2);
+        taskManager.deleteAllTasks();
+
+        assertNull(taskManager.getTaskById(task1Id), "Задача 1 не удалилась.");
+        assertNull(taskManager.getTaskById(task2Id), "Задача 2 не удалилась.");
+        assertEquals(0, taskManager.getAllTasks().size(), "Список задач не пустой.");
+    }
+
+    @Test
+    public void deleteAllSubtasks() {
+        final Epic epic1 = new Epic(null, "Эпик 1 из теста deleteAllSubtasks", "Описание эпика 1");
+        final Epic epic2 = new Epic(null, "Эпик 2 из теста deleteAllSubtasks", "Описание эпика 2");
+        final int epic1Id = taskManager.addNewEpic(epic1);
+        final int epic2Id = taskManager.addNewEpic(epic2);
+
+        final Subtask subtask1 = new Subtask(null, "Подзадача эпика 1 из теста deleteAllSubtasks",
+                "Описание подзадачи эпика 1", Status.DONE, epic1Id);
+        final Subtask subtask2 = new Subtask(null, "Подзадача эпика 2 из теста deleteAllSubtasks",
+                "Описание подзадачи эпика 2", Status.NEW, epic2Id);
+        final int subtask1Id = taskManager.addNewSubtask(subtask1);
+        final int subtask2Id = taskManager.addNewSubtask(subtask2);
+
+        taskManager.deleteAllSubtasks();
+
+        assertNull(taskManager.getSubtaskById(subtask1Id), "Подзадача эпика 1 не удалилась.");
+        assertNull(taskManager.getSubtaskById(subtask2Id), "Подзадача эпика 2 не удалилась.");
+        assertEquals(0, epic1.getSubtaskIds().size(), "Список id подзадач эпика 1 не пустой.");
+        assertEquals(0, epic2.getSubtaskIds().size(), "Список id подзадач эпика 2 не пустой.");
+        assertEquals(0, taskManager.getAllSubtasks().size(), "Список подзадач не пустой.");
+    }
+
+    @Test
+    public void deleteAllEpics() {
+        final Epic epic1 = new Epic(null, "Эпик 1 из теста deleteAllEpics", "Описание эпика 1");
+        final Epic epic2 = new Epic(null, "Эпик 2 из теста deleteAllEpics", "Описание эпика 2");
+        final int epic1Id = taskManager.addNewEpic(epic1);
+        final int epic2Id = taskManager.addNewEpic(epic2);
+
+        final Subtask subtask1 = new Subtask(null, "Подзадача эпика 1 из теста deleteAllEpics",
+                "Описание подзадачи эпика 1", Status.DONE, epic1Id);
+        final Subtask subtask2 = new Subtask(null, "Подзадача эпика 2 из теста deleteAllEpics",
+                "Описание подзадачи эпика 2", Status.NEW, epic2Id);
+        final int subtask1Id = taskManager.addNewSubtask(subtask1);
+        final int subtask2Id = taskManager.addNewSubtask(subtask2);
+
+        taskManager.deleteAllEpics();
+
+        assertNull(taskManager.getEpicById(epic1Id), "Эпик 1 не удалилился.");
+        assertNull(taskManager.getEpicById(epic2Id), "Эпик 2 не удалилился.");
+        assertNull(taskManager.getSubtaskById(subtask1Id), "Подзадача эпика 1 не удалилась.");
+        assertNull(taskManager.getSubtaskById(subtask2Id), "Подзадача эпика 2 не удалилась.");
+        assertEquals(0, taskManager.getAllSubtasks().size(), "Список подзадач не пустой.");
+        assertEquals(0, taskManager.getAllEpics().size(), "Список эпиков не пустой.");
     }
 }
